Correctly vertically align sidebar text

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -21,8 +21,9 @@
     width: 15.2vw;
     display: inline-block;
     padding-left: 0.5vw;
-    height: 70%;
+    height: 100%;
     vertical-align: middle;
+    line-height: 3vw;
     
     visibility: hidden;
     opacity: 0;
